Добавлена поддержка PostgreSQL в проект
- Обновлен go.mod для включения библиотеки github.com/lib/pq
- Добавлен новый Makefile target для запуска базы данных
- Обновлен Dockerfile для установки необходимых зависимостей PostgreSQL
- Добавлен новый сервис PostgreSQL в docker-compose.yaml
- Создан пример приложения для работы с базой данных PostgreSQL

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     golang-gopkg-yaml.v3-dev \
     golang-github-streadway-amqp-dev \
     golang-github-kelseyhightower-envconfig-dev \
+    golang-github-lib-pq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz -o /tmp/docker.tgz \
