Добавлен новый сервис для работы с метриками
- Создан интерфейс MetricStorage для управления метриками
- Реализован сервис для создания, получения, удаления и проверки метрик
- Добавлены тесты для сервиса метрик с использованием mock-объектов
- Обновлен go.mod для включения библиотеки github.com/golang/mock
- Обновлен Makefile для генерации mock-объектов
- Обновлен Dockerfile для установки необходимых зависимостей

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -25,6 +25,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     golang-github-streadway-amqp-dev \
     golang-github-kelseyhightower-envconfig-dev \
     golang-github-lib-pq-dev \
+    golang-github-golang-mock-dev \
+    golang-golang-x-mod-dev \
+    golang-golang-x-tools-dev \
+    golang-golang-x-tools \
+    mockgen \
     && rm -rf /var/lib/apt/lists/*
 
 RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz -o /tmp/docker.tgz \
