Refactor Makefile and Docker configurations
- Cleaned up Makefile by organizing targets and adding new ones for building development images and archiving source code.
- Updated .dockerignore to remove unnecessary blank line.
- Enhanced devcontainer configuration by adding GIT_EDITOR environment variable.
- Installed vim in the devcontainer Dockerfile.
- Simplified Dockerfile for consumer and producer by removing ARG declarations and directly using image names.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
     "containerEnv": {
         "GOTOOLCHAIN": "auto",
         "GOPATH": "/usr/share/gocode",
-        "DOCKER_HOST": "unix:///var/run/docker.sock"
+        "DOCKER_HOST": "unix:///var/run/docker.sock",
+        "GIT_EDITOR": "vim"
     },
     "forwardPorts": [
         5672,
