Add postCreateCommand for Git user configuration in devcontainer
- Added a postCreateCommand to set global Git user name and email for the development environment in devcontainer.json.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,6 +28,7 @@
         "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
         "source=${localWorkspaceFolder}/.devcontainer/.zshrc,target=/home/vscode/.zshrc,type=bind,consistency=cached"
     ],
+    "postCreateCommand": "git config --global user.name 'void-dev' && git config --global user.email 'void-dev@void.dev'",
     "customizations": {
         "vscode": {
             "extensions": [
