Add GolangCI-Lint configuration and integrate into Makefile
- Introduced .golangci.yml for linting configuration with specific linters enabled and disabled.
- Added a new 'lint' target in the Makefile to run GolangCI-Lint.
- Updated Dockerfile to install GolangCI-Lint for linting checks in the development environment.
- Enhanced code documentation with package comments in various files for better clarity.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -82,6 +82,9 @@ RUN mkdir -p $GOPATH/bin \
     && rm -rf $GOPATH $GOMODCACHE \
     && chmod +x /usr/local/bin/gopls /usr/local/bin/dlv
 
+RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b /usr/local/bin latest \
+    && chmod +x /usr/local/bin/golangci-lint
+
 ENV GOPATH=/usr/share/gocode
 ENV PATH=$PATH:/usr/local/bin
 ENV GOMODCACHE=
